--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,27 +44,22 @@ article{
     justify-content: center;
 }
 
+.form-floating{
+    padding-top: 10px;
+}
+
 .form {
     display: flex;
     flex-flow: column wrap;
     width: 80%;
-    padding-bottom: 10px; 
     justify-content: center;}
 .form button{
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
     justify-content: center;
+    background-color: black;
 }
-button{
-    padding-top: 10px;
-    justify-content: center;
-}
-  
-  input, textarea {
-    width: 300px; }
-  
-  
   #enviar {
     display: flex;
     flex-flow: row wrap;
@@ -98,6 +93,9 @@ section{
     background-color: white;
     min-height: 100vh;
 }
+strong{
+    color: white;
+}
 
 
 .c3{
@@ -113,7 +111,11 @@ section{
 
 }
 
-
+/*Recuadros*/
+.c3 button a{
+    text-decoration: none;
+    color: white;
+}
 
 
 @media screen and (min-width: 576px){
