--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,14 +48,20 @@ article{
     padding-top: 10px;
 }
 
+.btn{
+    padding-top: 10px;
+}
+
 .form {
     display: flex;
     flex-flow: column wrap;
     width: 80%;
     justify-content: center;}
+
 .form button{
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 70px;
     text-align: center;
     justify-content: center;
     background-color: black;
@@ -113,6 +119,7 @@ strong{
 
 /*Recuadros*/
 .c3 button a{
+    bottom: 50vh;
     text-decoration: none;
     color: white;
 }
@@ -150,6 +157,6 @@ justify-content: space-around;
 
 .img--c3{
     height: 500px;
-    width: 600px;
+    width: 650px;
 }
 }
