--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,54 +1,68 @@
-
-
-*{
+* {
     padding: 0%;
     margin: 0%;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 /*contenedor*/
-body{
+body {
     font-family: 'Open Sans', sans-serif;
-    display: grid;
+    color: grey;
     min-height: 100vh;
 }
+
 /*header nav*/
-header {
-    background: rgb(255,241,241);
-    background: linear-gradient(229deg, rgba(255,241,241,1) 6%, rgba(0,0,0,1) 14%, rgba(232,116,194,1) 33%, rgba(5,33,184,1) 58%, rgba(233,121,8,1) 64%, rgba(223,8,8,1) 87%);
-    max-height: 50px;
-}
-header nav ul{
+header nav ul {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    height: 50px;
+    flex-flow: column nowrap;
+    justify-content: center;
+    height: 200px;
     align-items: center;
-}
-ul li{
-    list-style: none;
+    background-color: rgb(236, 235, 235);
 }
 
-ul li a{
-    
+ul li {
+    list-style: none;
+    margin-right: 20px;
+}
+
+ul li:hover {
+    transform: scale(1.2);
+    transition: 1.5s;
+}
+
+ul li a {
     text-decoration: none;
-    color: white;
+    color: grey;
+}
+
+ul li a:hover {
+    color: orangered;
+    border-left: 10px;
+    border-right: 10px;
+
+}
+
+
+.logo {
+    height: 120px;
+    width: 150px;
 }
 
 /*Formulario*/
-article{
+article {
     display: flex;
-    background: rgb(255,241,241);
-    background: linear-gradient(229deg, rgba(255,241,241,1) 12%, rgba(0,0,0,1) 18%, rgba(232,116,194,1) 33%, rgba(5,33,184,1) 58%, rgba(233,121,8,1) 64%, rgba(223,8,8,1) 87%);
+    background-color: white;
     color: black;
     justify-content: center;
 }
 
-.form-floating{
+.form-floating {
     padding-top: 10px;
 }
 
-.btn{
+.btn {
     padding-top: 10px;
 }
 
@@ -56,61 +70,123 @@ article{
     display: flex;
     flex-flow: column wrap;
     width: 80%;
-    justify-content: center;}
+    justify-content: center;
+}
 
-.form button{
+.form button {
+    margin-top: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
     width: 70px;
     text-align: center;
     justify-content: center;
-    background-color: black;
-}
-  #enviar {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center; }
-/*footer*/
-
-footer{
-    background-color: rgb(155, 153, 153);
-    margin-top: auto;
-    height: 80px;
-    color: white;
-    text-align: right;
-    padding-right: 10px;
+    background-color: orangered;
 }
 
-/*Organizar contenido*/
-section div{
-    padding-top: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.banner h2{
-    padding-bottom: 10px;
-    text-align: center;
-}
-
-.banner img{
-    width: 100%;
-}
-section{
-    background-color: white;
-    min-height: 100vh;
-}
-strong{
-    color: white;
-}
-
-
-.c3{
+#enviar {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    border: solid 4px grey;
 }
-.img--c3{
+
+/*footer*/
+
+footer {
+    background-color: rgb(236, 235, 235);
+    padding: 1em;
+    bottom: 0;
+    margin-top: auto;
+    color: grey;
+    height: 100vh;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+}
+
+.pie {
+    bottom: 0;
+    margin-bottom: 5px;
+    margin-top: auto;
+    padding-top: 25vh;
+    text-align: center;
+}
+
+.redes {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.icons {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.icon--list {
+    flex-direction: row;
+}
+
+.icon--list ul {
+    flex-direction: row;
+}
+
+.icon--list ul li {
+    list-style: none;
+    display: inline-block;
+
+}
+
+.icon--list ul li a i {
+    color: grey;
+}
+
+.sucursales {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+}
+
+.sucursales a {
+    text-decoration: none;
+    color: grey;
+    padding-top: 40px;
+}
+
+/*Organizar contenido*/
+section div {
+    margin-bottom: 10px;
+}
+
+.banner img {
+    width: 100%;
+}
+
+section {
+    background-color: white;
+    min-height: 100vh;
+}
+
+strong {
+    color: grey;
+}
+
+
+.c3 {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    border: solid 4px grey;
+    border-radius: 12%;
+    width: 300px;
+    text-align: center;
+    padding-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.img--c3 {
     padding-top: 20px;
     height: 200px;
     width: 200px;
@@ -118,45 +194,101 @@ strong{
 }
 
 /*Recuadros*/
-.c3 button a{
-    bottom: 50vh;
+.c3 button a {
     text-decoration: none;
     color: white;
 }
 
+.c3 button {
+    background-color: orangered;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
 
-@media screen and (min-width: 576px){
-    
-    .c3{
+.recuadros {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+
+@media screen and (min-width: 576px) {
+
+    .c3 {
         justify-content: center;
-    }
-
-    .img--c3{
-        height: 350px;
         width: 400px;
     }
 
+    .img--c3 {
+        height: 320px;
+        width: 380px;
+    }
+
+    header nav ul {
+        height: 200px;
+
+    }
 }
 
 
 
 
-@media screen and (min-width: 900px){
-.formu{
-    padding-top: 20px;
-    display: flex;
-    flex-direction: row; 
-    justify-content: center;
-    padding-bottom: 20px;}
-.form {
-        width: 50%;}
+@media screen and (min-width: 900px) {
+    .formu {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
 
-.c3{
-justify-content: space-around;
-}
+    .form {
+        width: 50%;
+    }
 
-.img--c3{
-    height: 500px;
-    width: 650px;
-}
+    .c3 {
+        justify-content: space-around;
+        width: 400px;
+    }
+
+    .img--c3 {
+        height: 300px;
+        width: 350px;
+    }
+
+    .recuadros {
+        flex-flow: row wrap;
+    }
+
+    header nav ul {
+        height: 80px;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+
+    }
+    .img--c3 {
+        height: 320px;
+        width: 400px;
+    }
+
+    .logo {
+        height: 150px;
+        width: 180px;
+    }
+    .pie{
+        padding-top: 20vh;
+    }
+    .redes {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .sucursales {
+
+        flex-flow: row wrap;
+        padding-top: 30vh;
+    }
 }
