--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,37 +13,25 @@ body {
 }
 
 /*header nav*/
-header nav ul {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    height: 200px;
-    align-items: center;
+header{
     background-color: rgb(236, 235, 235);
 }
 
 ul li {
     list-style: none;
+    margin-left: 60px;
     margin-right: 20px;
 }
 
 ul li:hover {
-    transform: scale(1.2);
-    transition: 1.5s;
+    transform: scale(1.1);
+    transition: 1s;
 }
 
 ul li a {
     text-decoration: none;
     color: grey;
 }
-
-ul li a:hover {
-    color: orangered;
-    border-left: 10px;
-    border-right: 10px;
-
-}
-
 
 .logo {
     height: 120px;
@@ -157,9 +145,7 @@ section div {
     margin-bottom: 10px;
 }
 
-.banner img {
-    width: 100%;
-}
+
 
 section {
     background-color: white;
@@ -189,9 +175,17 @@ strong {
     padding-top: 20px;
     height: 200px;
     width: 200px;
-
 }
 
+#img-c3{
+    height: 200px;
+    width: 250px;
+}
+
+.img--c3:hover{
+    transform: scale(1.1);
+    transition: all 1s;
+}
 /*Recuadros*/
 .c3 button a {
     text-decoration: none;
@@ -217,6 +211,9 @@ strong {
 
 @media screen and (min-width: 576px) {
 
+    .carrousel{
+        display: none;
+    }
     .c3 {
         justify-content: center;
         width: 400px;
@@ -231,12 +228,19 @@ strong {
         height: 200px;
 
     }
+    #img-c3{
+        height: 330px;
+        width: 380px;
+    }
 }
 
 
 
 
 @media screen and (min-width: 900px) {
+    .carrousel{
+        display: block;
+    }
     .formu {
         padding-top: 20px;
         display: flex;
@@ -273,7 +277,10 @@ strong {
         height: 320px;
         width: 400px;
     }
-
+    #img-c3{
+        height: 320px;
+        width: 420px;
+    }
     .logo {
         height: 150px;
         width: 180px;
